add styles in css file

--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
 }
 
 img {
-    width: 500px;
-    height: auto;
+    width: auto;
+    height: 500px;
+}
+
+.description-para,
+li {
+    background-color: azure;
 }
